--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_CHAT_MODEL=qwen2.5:1.5b            # 通用对话模型
 OLLAMA_REASON_MODEL=deepseek-r1:32b       # 深度思考模型
 
-# SerpAPI 配置 (搜索增强)
+# SerpAPI 配置 (搜索增强) , 注册地址：https://serpapi.com/
 SERPAPI_KEY=your-serpapi-key
 
 DB_HOST=localhost
